Responsive till 320px and alignment fixes done.

--- a/src/assets/css/welcome.css
+++ b/src/assets/css/welcome.css
@@ -1480,12 +1480,36 @@
       width: 270px;
     }
 }
+@media screen and (max-width: 413px){
+  .mhacks-last-contact-input{
+    width: 120%;
+  }
+}
+@media screen and (max-width: 385px){
+  .mhacks-last-contact-input{
+    width: 110%;
+  }
+  .mhacks-mid-team-header{
+    margin-top: -40%;
+  }
+}
 @media screen and (max-width: 376px){
   .mhacks-mid-team-header{
     margin-top: -41%;
   }
   .mhacks-last-contact-input{
     width: 100%;
+  }
+}
+@media screen and (max-width: 321px){
+  .mhacks-mid-mission-text{
+    width: 180px;
+  }
+  .mhacks-mid-mission-content{
+    width: 270px;
+  }
+  .mhacks-last-contact-input{
+    width: 88%;
   }
 }
 
